--- a/SameGame.html
+++ b/SameGame.html
@@ -6,198 +6,74 @@
    <head>
       <script src = "Color.js"></script>
       <script src = "Tile.js"></script>
+      <script src = "Grid.js"></script>
+      <script src = "Position.js"></script>
    </head>
    <body>
       <svg xmlns="http://www.w3.org/2000/svg"></svg>
       <div>Score: <span id="score" /></div>
-      <button type = "button" onclick = "newGame()">New Game</button>
+      <button type = "button" onclick = "grid.generate(); grid.attachTo(svg);">New Game</button>
 
       <script type="text/javascript">
       <!--
 
-var NUM_ROWS = 10;
-var NUM_COLUMNS = 20;
-
-var span = document.getElementById("score");
 var svg = document.body.getElementsByTagName("svg")[0];
 
-svg.setAttribute("width", NUM_COLUMNS * Tile.SIZE);
-svg.setAttribute("height", NUM_ROWS * Tile.SIZE);
+svg.setAttribute("width", Grid.NUM_COLUMNS * Tile.SIZE);
+svg.setAttribute("height", Grid.NUM_ROWS * Tile.SIZE);
 
-var colors = [Color.NONE, Color.RED, Color.GREEN, Color.BLUE, Color.YELLOW, Color.ORANGE];
+var grid = new Grid();
 
-var user, numChains;
+grid.generate();
+grid.attachTo(svg);
 
-var grid = new Array(NUM_ROWS);
+var score = 0;
 
-for(var row = 0; row < NUM_ROWS; row++) {
-   grid[row] = new Array(NUM_COLUMNS);
-}
+var span = document.getElementById("score");
+span.innerHTML = score;
 
-newGame();
+function updateScore(row, column) {
+   var tile = grid.getTile(row, column);
+   tile.detachFrom(svg);
 
-function newGame() {
-   user = 0;
-   span.innerHTML = user;
+   var point = tile.getPoint();
+   var numChains = 1;
 
-   var tile, point, func;
+   // stack to store grid positions to check
+   var positions = new Array();
 
-   for(var row = 0; row < NUM_ROWS; row++) {
-      for(var column = 0; column < NUM_COLUMNS; column++) {
-         if(grid[row][column] != undefined) {
-            grid[row][column].detachFrom(svg);
-            grid[row][column] = undefined;
-         }
+   positions.push(new Position(row - 1, column));   // above
+   positions.push(new Position(row, column + 1));   // right
+   positions.push(new Position(row + 1, column));   // below
+   positions.push(new Position(row, column - 1));   // left
 
-         // random number between 1 and 5
-         point = Math.floor((Math.random() * 5) + 1);
+   var position;
 
-         tile = new Tile();
+   while(positions.length > 0) {
+      position = positions.pop();
 
-         tile.setPoint(point);
-         tile.setColor(colors[point]);
+      row = position.getRow();
+      column = position.getColumn();
 
-         tile.setXCoordinate(column * 20);
-         tile.setYCoordinate(row * 20);
+      tile = grid.getTile(row, column);
 
-         func = new Function("score(" + row + ", " + column + ")");
-         tile.onClick(func);
+      if(tile != undefined) {
+         if(tile.isVisible() && (tile.getPoint() == point)) {
+            numChains++;
+            tile.detachFrom(svg);
 
-         tile.attachTo(svg);
-         grid[row][column] = tile;
-      }
-   }
-}
-
-
-function score(row, column) {
-   var point = grid[row][column].getPoint();
-
-   numChains = 1;
-
-   // remove tile
-   grid[row][column].detachFrom(svg);
-   grid[row][column] = undefined;
-
-   checkNeighbors(row, column, point);
-   compress();
-
-   user += ((point * numChains) * numChains);
-   span.innerHTML = user;
-}
-
-function checkNeighbors(row, column, point) {
-   check(row - 1, column, point); // above
-   check(row, column + 1, point); // right
-   check(row + 1, column, point); // below
-   check(row, column - 1, point); // left
-}
-
-function check(row, column, point) {
-   if((row < 0) || (row >= NUM_ROWS)) {
-      return;
-   }
-
-   if((column < 0) || (column >= NUM_COLUMNS)) {
-      return;
-   }
-
-   if(isChain(row, column, point)) {
-      numChains++;
-
-      // remove tile
-      grid[row][column].detachFrom(svg);
-      grid[row][column] = undefined;
-
-      checkNeighbors(row, column, point);
-   }
-}
-
-function isChain(row, column, point) {
-   if(grid[row][column] != undefined) {
-      return (grid[row][column].getPoint() == point);
-   }
-
-   return false;
-}
-
-function compress() {
-   var point, color, r, c, tile;
-
-   for(var column = 0; column < NUM_COLUMNS; column++) {
-      for(var row = NUM_ROWS - 1; row >= 0; row--) {
-         if(grid[row][column] == undefined) {
-            r = row - 1;
-
-            while(r >= 0) {
-               if(grid[r][column] != undefined) {
-                  tile = new Tile();
-
-                  tile.setXCoordinate(column * 20);
-                  tile.setYCoordinate(row * 20);
-
-                  func = new Function("score(" + row + ", " + column + ")");
-                  tile.onClick(func);
-
-                  point = grid[r][column].getPoint();
-                  tile.setPoint(point);
-
-                  color = grid[r][column].getColor();
-                  tile.setColor(color);
-
-                  tile.attachTo(svg);
-
-                  grid[row][column] = tile;
-
-                  grid[r][column].detachFrom(svg);
-                  grid[r][column] = undefined;
-
-                  r = 0;
-               }
-
-               r--;
-            }
+            positions.push(new Position(row - 1, column));   // above
+            positions.push(new Position(row, column + 1));   // right
+            positions.push(new Position(row + 1, column));   // below
+            positions.push(new Position(row, column - 1));   // left
          }
       }
    }
 
-   for(var column = 0; column < NUM_COLUMNS; column++) {
-      if(grid[NUM_ROWS - 1][column] == undefined) {
-         c = column + 1;
+   score += (point * numChains * numChains);
+   span.innerHTML = score;
 
-         while(c < NUM_COLUMNS) {
-            if(grid[NUM_ROWS - 1][c] != undefined) {
-               for(var row = 0; row < NUM_ROWS; row++) {
-                  if(grid[row][c] != undefined) {
-                     tile = new Tile();
-                     tile.attachTo(svg);
-
-                     grid[row][column] = tile;
-
-                     tile.setXCoordinate(column * 20);
-                     tile.setYCoordinate(row * 20);
-
-                     func = new Function("score(" + row + ", " + column + ")");
-                     tile.onClick(func);
-
-                     point = grid[row][c].getPoint();
-                     tile.setPoint(point);
-
-                     color = grid[row][c].getColor();
-                     tile.setColor(color);
-
-                     grid[row][c].detachFrom(svg);
-                     grid[row][c] = undefined;
-                  }
-               }
-
-               c = NUM_COLUMNS;
-            }
-
-            c++;
-         }
-      }
-   }
+   grid.compress(svg);
 }
 
       //-->
