reset score when user clicks on new game

--- a/SameGame.html
+++ b/SameGame.html
@@ -12,7 +12,7 @@
    <body>
       <svg xmlns="http://www.w3.org/2000/svg"></svg>
       <div>Score: <span id="score" /></div>
-      <button type = "button" onclick = "grid.generate(); grid.attachTo(svg);">New Game</button>
+      <button type = "button" onclick = "grid.generate(); grid.attachTo(svg); span.innerHTML = 0;">New Game</button>
 
       <script type="text/javascript">
       <!--
